# qa-agent

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
src/agents/: browser_agent.py  gherkin_agent.py  llm_provider.py  playwright_agent.py  qa_agent.py  test_agent.py
src/database/: session.py
src/database/crud/: __init__.py  test_log.py
src/database/models/: __init__.py  test_log.py
src/prompts/: generate_playright_code.py  gherkin_scenario_template.py
